2.1.0/_sources/gallery/mplot3d/contour3d_2.rst.txt


.. _sphx_glr_gallery_mplot3d_contour3d_2.py:


============================================================================
Demonstrates plotting contour (level) curves in 3D using the extend3d option
============================================================================

This modification of the contour3d_demo example uses extend3d=True to
extend the curves vertically into 'ribbons'.




.. image:: /gallery/mplot3d/images/sphx_glr_contour3d_2_001.png
    :align: center





.. code-block:: python


    from mpl_toolkits.mplot3d import axes3d
    import matplotlib.pyplot as plt
    from matplotlib import cm

    fig = plt.figure()
    ax = fig.gca(projection='3d')
    X, Y, Z = axes3d.get_test_data(0.05)

    cset = ax.contour(X, Y, Z, extend3d=True, cmap=cm.coolwarm)

    ax.clabel(cset, fontsize=9, inline=1)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.045 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: contour3d_2.py <contour3d_2.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: contour3d_2.ipynb <contour3d_2.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
